<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search View Widget -->
    <item
        android:id="@+id/menu_annotlist_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <!-- Sort Annotation List -->
    <item
        android:id="@id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_new"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_annotlist_sort_by_date"
                    android:title="@string/action_sort_annotlist_by_date"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/menu_annotlist_sort_by_position"
                    android:title="@string/action_sort_annotlist_by_position"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
    <item
        android:id="@id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always">
    </item>
</menu>