<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <com.pdftron.pdf.dialog.digitalsignature.SignatureInfoView
        android:id="@+id/sig_info_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:info_label="@string/tools_digitalsignature_permission" />

    <com.pdftron.pdf.dialog.digitalsignature.SignatureInfoView
        android:id="@+id/sig_info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:info_label="@string/tools_digitalsignature_name" />

    <com.pdftron.pdf.dialog.digitalsignature.SignatureInfoView
        android:id="@+id/sig_info_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:info_label="@string/tools_digitalsignature_location" />

    <com.pdftron.pdf.dialog.digitalsignature.SignatureInfoView
        android:id="@+id/sig_info_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:info_label="@string/tools_digitalsignature_contact_info" />

    <com.pdftron.pdf.dialog.digitalsignature.SignatureInfoView
        android:id="@+id/sig_info_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:info_label="@string/tools_digitalsignature_reason" />

    <com.pdftron.pdf.dialog.digitalsignature.SignatureInfoView
        android:id="@+id/sig_info_signing_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:info_label="@string/tools_digitalsignature_signing_time" />

</LinearLayout>