<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@id/qm_highlight"
        android:title="@string/tools_qm_highlight"
        android:icon="@drawable/ic_annotation_highlight_black_24dp"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item android:id="@id/qm_underline"
        android:title="@string/tools_qm_underline"
        android:icon="@drawable/ic_annotation_underline_black_24dp"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item android:id="@id/qm_squiggly"
        android:title="@string/tools_qm_squiggly"
        android:icon="@drawable/ic_annotation_squiggly_black_24dp"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item android:id="@id/qm_strikeout"
        android:title="@string/tools_qm_strikeout"
        android:icon="@drawable/ic_annotation_strikeout_black_24dp"
        android:orderInCategory="1"
        app:showAsAction="always"/>

</menu>