<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/annotation_filter_item_background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_medium"
    android:paddingRight="@dimen/padding_large">

    <RadioGroup
        android:id="@+id/radio_group_filter_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_show_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="true"
            android:layoutDirection="rtl"
            android:padding="@dimen/padding_large"
            android:text="@string/annotation_filter_title_show_all"
            android:textAlignment="textStart" />

        <RadioButton
            android:id="@+id/radio_hide_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:padding="@dimen/padding_large"
            android:text="@string/annotation_filter_title_hide_all"
            android:textAlignment="textStart" />

        <RadioButton
            android:id="@+id/radio_apply_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:padding="@dimen/padding_large"
            android:text="@string/annotation_filter_title_apply_filter"
            android:textAlignment="textStart" />

        <RadioButton
            android:id="@+id/radio_apply_filter_annotation_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:padding="@dimen/padding_large"
            android:text="@string/annotation_filter_title_apply_filter_aanotation_list"
            android:textAlignment="textStart" />
    </RadioGroup>

</LinearLayout>