<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/controls_thumbnails_view_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground"
        android:elevation="@dimen/actionbar_elevation">

        <!--suppress AndroidDomInspection svg -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/controls_thumbnails_view_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/pt_toolbar_theme"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"
            style="?attr/pt_toolbar_style"
            app:popupTheme="?attr/pt_toolbar_popup_theme"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:navigationContentDescription="@string/tools_misc_close"/>

        <!--suppress AndroidDomInspection svg -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/controls_thumbnails_view_cab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/pt_toolbar_theme"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"
            style="?attr/pt_toolbar_style"
            app:popupTheme="?attr/pt_toolbar_popup_theme"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:navigationContentDescription="@string/cancel"
            android:visibility="gone"/>

    </FrameLayout>

    <com.pdftron.pdf.widget.recyclerview.SimpleRecyclerView
        android:id="@+id/controls_thumbnails_view_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/controls_thumbnails_view_toolbar_layout"
        android:background="?android:attr/colorBackground"/>

    <ProgressBar
        android:id="@+id/progress_bar_view"
        style="@style/MaterialProgressBarStyle"
        android:layout_below="@id/controls_thumbnails_view_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.pdftron.pdf.widget.PTFloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:paddingRight="@dimen/fab_button_margin"
        android:paddingEnd="@dimen/fab_button_margin"
        android:paddingBottom="@dimen/fab_button_margin"
        style="@style/FloatingActionMenuStyle"
        app:menu_openDirection="up"
        app:menu_labels_style="@style/fabMenuLabelStyle"
        app:menu_backgroundColor="@color/fab_menu_background">

        <com.pdftron.pdf.widget.PTFloatingActionButton
            android:id="@+id/page_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_blank_page_white"
            style="@style/FloatingActionButtonStyle"
            app:fab_size="mini"
            app:fab_label="@string/dialog_add_new_page_pdf_title"/>

        <com.pdftron.pdf.widget.PTFloatingActionButton
            android:id="@+id/image_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_image_white"
            style="@style/FloatingActionButtonStyle"
            app:fab_size="mini"
            app:fab_label="@string/dialog_add_new_photo_pdf_title"/>

        <com.pdftron.pdf.widget.PTFloatingActionButton
            android:id="@+id/pdf_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_blank_page_white"
            style="@style/FloatingActionButtonStyle"
            app:fab_size="mini"
            app:fab_label="@string/dialog_add_pdf_doc_title"/>

    </com.pdftron.pdf.widget.PTFloatingActionMenu>

</RelativeLayout>
